// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnConfiguration component should render accession 1`] = `
<DocumentFragment>
  <a
    href="/uniprotkb/P21802"
  >
    P21802 (Swiss-Prot)
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render gene_names 1`] = `
<DocumentFragment>
  <span>
    <strong>
      some Gene
    </strong>
    , some Syn, some orf, some locus
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render id 1`] = `
<DocumentFragment>
  <span>
    uniprot id
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render organism 1`] = `
<DocumentFragment>
  <span>
    scientific name (common name)  (synonyms 1)
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render protein_name 1`] = `
<DocumentFragment>
  <span>
    <strong>
      rec full Name
    </strong>
     
    <div>
      1.2.3.4, sub full Name, a full alt Name
    </div>
  </span>
</DocumentFragment>
`;
